--- a/package.yaml
+++ b/package.yaml
@@ -10,14 +10,10 @@ extra-source-files:
 - README.md
 - ChangeLog.md
 
-# Metadata used when publishing your package
-# synopsis:            Short description of your package
-# category:            Web
+synopsis:            Bindings for C++ demangling routines
+category:            System
 
-# To avoid duplicated efforts in documentation and dealing with the
-# complications of embedding Haddock markup inside cabal files, it is
-# common to point users to the README.md file.
-description:         Please see the README on Github at <https://github.com/githubuser/cppfilt#readme>
+description:         Please see the README on Github at <https://github.com/0xd34df00d/cppfilt#readme>
 
 dependencies:
 - base >= 4.7 && < 5
