--- a/package.yaml
+++ b/package.yaml
@@ -34,3 +34,14 @@ tests:
     dependencies:
     - cppfilt
     - hspec
+benchmarks:
+  cppfilt-benchmarks:
+    main:                Bench.hs
+    source-dirs:         bench
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - cppfilt
+    - criterion
